fix color contrast

--- a/_sass/color_schemes/dark.scss
+++ b/_sass/color_schemes/dark.scss
@@ -70,4 +70,4 @@ $base-button-color: $grey-dk-200;
 }
 
 // Custom colors
-$hw-rel: #009d9a;
+$hw-rel: #00EBC4;
